tests/fixtures/invalid/abs_no_args.py
# abs() requires at least 1 argument
x = abs()
